<resources>
    <string name="app_name">Week 11</string>
    <string name="calculator">Kalkulator</string>
    <string name="timer">Timer</string>
    <string name="descImage">Description</string>
    <string name="week11">Praktikum PAB Week 11</string>

    <!--  CALCULATOR  -->
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="awal">0</string>
    <string name="bagi">/</string>
    <string name="kali">*</string>
    <string name="kurang">-</string>
    <string name="hapus">C</string>
    <string name="hasil">=</string>
    <string name="tambah">+</string>

    <!--  TIMER  -->
    <string name="place_holder_time">00:00:00</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>