<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/week11"
        android:textSize="35sp" />

    <Button
        android:id="@+id/buttonCalculator"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:onClick="toCalculator" />

    <Button
        android:id="@+id/buttonTimer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/timer"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:onClick="toTimer" />

</LinearLayout>
